syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";

// package 命名使用 {appid}.{version} 的方式, version 形如 v1, v2 ..
package sheet.service.v1;

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service Sheet {
  rpc LoadExcel(LoadExcelReq) returns (LoadExcelResp) {
    option (google.api.http) = {
      post: "excel"
    };
  };
  rpc LoadExcelSheet(LoadExcelSheetReq) returns (LoadExcelSheetResp) {
    option (google.api.http) = {
    post: "excel/sheet"
    };
  };
}

message LoadExcelReq {
  string gridKey = 1 [(gogoproto.moretags) = 'form:"gridKey" validate:"required"'];
}

message LoadExcelResp {
  string content = 1;
}


message LoadExcelSheetReq {
  string gridKey = 1 [(gogoproto.moretags) = 'form:"gridKey" validate:"required"'];
  string indexs = 2 [(gogoproto.moretags) = 'form:"index"'];
}

message LoadExcelSheetResp {
  string content = 1;
}